Apply JaCoCo globally. Also removes an argument now outdated in Java 8